--- a/index.html
+++ b/index.html
@@ -1,62 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Oswald:500|Source+Sans+Pro:900&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="script.js"></script>
-</head>
-<body>
-
-  <header>
-    <div class="container">
-      <nav>
-        <ul>
-          <li><a href="#Home">Home</a></li>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Calendar">Calendar</a></li>
-          <li><a href="#Sponsors">Sponsors</a></li>
-          <li><a href="#Social">Social</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <div class="page-div" id="Home">
-  </div>
-
-  <div class="page-div" id="Calendar">
-    <div class="event">
-      <img src="calendar-image.jpg" class="calendar-img">
-    </div>
-  </div>
-
-  <div class="page-div" id="Sponsors">
-    <div class="row">
-      <div class="column">
-        <a href="https://www.pirelli.com/global/en-ww/homepage" target="_blank"><img src="pirelli-logo.png" alt="Snow" style="width:80%;"></a>
-      </div>
-      <div class="column">
-        <a href="https://www.raf.mod.uk/" target="_blank"><img src="raf-logo.svg.png" alt="Forest" style="width:80%;"></a>
-      </div>
-      <div class="column">
-        <a href="https://www.raf.mod.uk/recruitment/" target="_blank"><img src="ordinary-logo.png" alt="Mountains" style="width:80%;"></a>
-      </div>
-    </div>
-  </div>
-
-  <div id="Social">
-    <div id="social-images">
-        <img src="social-image.jpg">
-      <div id="social-media-images">
-        <a href="https://www.instagram.com/philhallrally " target="_blank"> <img src="instagram.png"> </a>
-        <a href="https://www.facebook.com/philrally" target="_blank"> <img src="facebook.png"> </a>
-        <a href="https://twitter.com/philhallrally" target="_blank"> <img src="twitter.png"> </a>
-      </div>
-    </div>
-  </div>
-
-</html>
+ello mate
