--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Kevin : Home</title>
+    <title>Raefe : Home</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
     <!-- Font Awesome -->
@@ -55,7 +55,7 @@
 		      </button>
 
 		      <!-- Text Logo -->
-		      <a class="navbar-brand" href="#">Kevin</a>
+		      <a class="navbar-brand" href="#">Raefe</a>
 
 		      <!-- Image Logo -->
 		      <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
@@ -87,14 +87,14 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="mu-featured-area">
-						<h1>Kevin Petter</h1>
+						<h1>Raefe Newton-Jones</h1>
 
 						<!-- Start text slide -->
 						<div class="mu-featured-slider-wrapper">
 							<div class="mu-featured-slider" id="typed-strings">
-								<p>I am <span>UI/UX Designer</span></p>
-								<p>I am <span>Web Developer</span></p>
-		   						<p>I am <span>Photographer</span></p>
+								<p>I am an <span>Software Engineer</span></p>
+								<p>I am a <span>Physical specimen</span></p>
+		   						<p>I am an <span>All round legend</span></p>
 							</div>
 							<span id="typed"></span>
 						</div>
@@ -127,7 +127,7 @@
 							<div class="mu-about-header">
 								<h2 class="mu-heading-title">ABOUT ME</h2>
 								<span class="mu-header-dot"></span>
-								<p>My name is Kevin Pitter. I am professional <strong>Web Designer</strong> and <strong>Web Developer</strong>. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
+								<p>My name is Raefe Newton-Jones. I am a professional <strong>Web Developer</strong>. </p>
 							</div>
 
 							<!-- Start About Us Content -->
