--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
 						<!-- Start text slide -->
 						<div class="mu-featured-slider-wrapper">
 							<div class="mu-featured-slider" id="typed-strings">
-								<p>I am an <span>Software Engineer</span></p>
-								<p>I am a <span>Physical specimen</span></p>
-		   						<p>I am an <span>All round legend</span></p>
+								<p>I am <span>software developer</span></p>
+								<p>I am <span>physical specimen</span></p>
+		   						<p>I am <span>all round legend</span></p>
 							</div>
 							<span id="typed"></span>
 						</div>
 						<!-- Start text slide -->
 						
 						<div class="mu-featured-content">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsa necessitatibus voluptate. Dolores sed neque, accusantium iusto inventore harum quibusdam, aspernatur, ullam vero ea eos ipsam tenetur dolore qui voluptatibus!</p>
+							<p>I have years of software experience, for instance this website took me about 5 moinutes to knock up</p>
 							<a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn">VIEW MY WORK</a>
 						</div>
 
