random content updates

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav mu-menu navbar-right">
 			        <li><a href="#">HOME</a></li>
-			        <li><a href="#mu-about">ABOUT US</a></li>
+			        <li><a href="#mu-about">ABOUT</a></li>
 			        <li><a href="#mu-service">SERVICES</a></li>
 		            <li><a href="#mu-portfolio">PORTFOLIO</a></li>
 		            <li><a href="#mu-testimonials">TESTIMONIALS</a></li>
@@ -101,7 +101,7 @@
 						<!-- Start text slide -->
 						
 						<div class="mu-featured-content">
-							<p>I have years of software experience, for instance this website took me about 5 moinutes to knock up</p>
+							<p>I have years of software experience, for instance this website took me about 5 minutes to knock up, I just did it ot annoy george</p>
 							<a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn">VIEW MY WORK</a>
 						</div>
 
@@ -444,23 +444,23 @@
 
 									<li>
 										<i class="fa fa-quote-right mu-quote-icon"></i>
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-										<h5 class="mu-ct-name"> - Jhon Doe</h5>
-										<span class="mu-ct-title">CEO, Apple Inc.</span>
+										<p>Raefe is the best Developer I've ever seen, pogchamp.</p>
+										<h5 class="mu-ct-name"> - George Drayson</h5>
+										<span class="mu-ct-title">CEO, Nebula Digital.</span>
 									</li>
 
 									<li>
 										<i class="fa fa-quote-right mu-quote-icon"></i>
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-										<h5 class="mu-ct-name"> - Alice Boga</h5>
-										<span class="mu-ct-title">Director, Google Inc.</span>
+										<p>37 inch vertical leap, what a guy.</p>
+										<h5 class="mu-ct-name"> - DrDisRespectLIVE</h5>
+										<span class="mu-ct-title">Director, Champions Club.</span>
 									</li>
 
 									<li>
 										<i class="fa fa-quote-right mu-quote-icon"></i>
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-										<h5 class="mu-ct-name"> - Jhon Smith</h5>
-										<span class="mu-ct-title">Web Developer</span>
+										<p>He's a good egg.</p>
+										<h5 class="mu-ct-name"> - Patrick Newton</h5>
+										<span class="mu-ct-title">My dad</span>
 									</li>
 
 								</ul>
